tests/ui/invalid_binary_expr.ina
// COMPILE_FAIL

fn main() {
    let a = 20;
    let b = 50.;
    let c = a + b;
}
